src/log/build_2022-06-01_21-26-52/python_publisher/stderr.log
  File "/home/kcg/ROS2Sample/src/install/python_publisher/lib/python3.8/site-packages/python_publisher/adaptive_cruise_control.py", line 178
    if speed > 50.0
                  ^
SyntaxError: invalid syntax

